<resources>
    <string name="app_name">Midterm (Bill)</string>
    <string name="billamount">BillAmount</string>
    <string name="percent">Percent</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="rounding">Rounding</string>
    <string name="splitbill">SplitBill?</string>
    <string name="perperson">PerPerson</string>
    <string name="apply">APPLY</string>
    <string name="enter_the_bill_amount">Enter the bill amount</string>
    <string name="_0">0%</string>
    <string name="none">None</string>
    <string name="_0_00">$0.00</string>
    <string name="_5">5%</string>
    <string name="press_to_calculate_the_amount_per_person">Press to calculate the amount per person!</string>
    <string-array name="rounding_array">
        <item>No</item>
        <item>2 ways</item>
        <item>3 ways</item>
        <item>4 ways</item>
    </string-array>
</resources>